[package]
name = "tiled_loader"
version = "0.1.0"
authors = ["Felix Rath <felixr@archlinux.info>"]

[dependencies]
serde = "1.0.37"
serde_derive = "1.0.37"
# serde-xml-rs = "0.2.1"
serde-xml-rs = { git = "https://github.com/RReverser/serde-xml-rs.git" }
regex = "0.2.10"
base64 = "0.9"
byteorder = "1.2.2"
flate2 = "1.0.1"
lazy_static = "1.0.0"
walkdir="2"
